# fastapi-project

./: Makefile  README.md  main.py  pyproject.toml  setup.cfg
alembic/: env.py
alembic/versions/: 2ba411732772_initial.py
app/api/endpoints/: todo.py
app/api/schemas/: todo.py
app/core/: config.py
app/db/: database.py  models.py
app/repositories/: base_repository.py  todo_repository.py
app/services/: todo_service.py
app/utils/: unit_of_work.py
