[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = ["Elena Dobruk <elena.dobruk@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.5"}
uvicorn = "^0.32.1"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.36"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
